Add pointScales endpoint functional tests
